Changed gameover message

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div id="game-over-screen" style="display: none">
         <h1>GAME OVER</h1>
         <p id="final-score">Score: 0</p>
-        <p>Can you solve faster next time?</p>
+        <p>Can you beat your score?</p>
         <button id="restart-btn" class="btn">PLAY AGAIN</button>
       </div>
 
